--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@ eleventyExcludeFromCollections: true
 <div class="content">
   <h1><a href="{{ post.url | url }}">{{ post.data.title }}</a></h1>
   <div class="meta">
-    {{ post.date | date: "%Y-%m-%d" }}
+  
+    {% if post.date %}
+        {{ post.date | date: "%Y-%m-%d" }}
+    {% else %}
+        Aus dem Archiv
+    {% endif %}
+        
     {% for tag in post.data.tags %}
         &middot; <a href="/tags/{{ tag }}"/>{{ tag }}</a>
     {% endfor %}
